# barnes-hut-sim

./: CMakeLists.txt  README.md
data/: shader.vert
src/: constants.h  csv.c  csv.h  linear.c  linear.h  sim.c  stretchy_buffer.h  viewer.c
